--- a/Tugas1/assets/styles/main.css
+++ b/Tugas1/assets/styles/main.css
@@ -1,27 +1,16 @@
+@import url(./_root.css);
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.bg-gradient-primary {
-  background: rgb(31, 70, 154);
-  background: linear-gradient(
-    360deg,
-    rgba(31, 70, 154, 1) 0%,
-    rgba(2, 106, 182, 1) 60%
-  );
-}
-
-.border-primary {
-  border-color: rgba(2, 106, 182, 1) !important;
-}
-
 body {
   width: 100%;
   height: min-content;
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
+  font-family: "Inter", sans-serif !important;
+  font-optical-sizing: auto !important;
   background-image:  linear-gradient(0deg, transparent, rgba(219, 219, 219, 0.8), rgba(255, 255, 255, 0.8)), url("../images/bg_utb.jpg");
   background-size: cover;
   background-position: center;
@@ -39,43 +28,55 @@ h6 {
   padding: 0 !important;
 }
 
+
 .logo {
   height: 80px;
   object-fit: contain;
 }
 
+.nav-item:hover {
+  background-color: var(--bg-secondary-primary);
+  transition: 0.5s;
+}
+
 /* Home */
 .content-box {
-  background-color: #fff;
+  background-color: var(--text-light-primary);
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
   padding: 30px;
 }
 
+.list-group-item > a {
+  color: var(--text-dark-primary);
+}
+
 .title {
-  color: #fff;
-  background-color: #188754;
+  color: var(--text-light-primary);
+  background-color: var(--bg-green-primary);
   border-radius: 10px 13px 13px 10px;
-  margin: 10px 0px 30px 0px;
+  margin-bottom: 30px;
 }
 
 .number-of-yntkts{
-  color: #fff;
-  background-color: #16623d;
+  color: var(--text-light-primary);
+  background-color: var(--bg-green-secondary);
   border-radius: 10px;
 }
 
 .stay-text {
-  color: #000000;
-  background-color: #f6f6f6;
-  border-radius: 10px 13px 13px 10px;
-  margin: 10px 0px 30px 0px;
+  color: var(--text-dark-primary);
+  background-color: var(--bg-gray-primary);
 }
 
 .stay-number{
-  color: #fff;
-  background-color: #16623d;
+  color: var(--text-light-primary);
+  background-color: var(--bg-green-secondary);
   border-radius: 10px;
 }
 /* End Home */
+
+#profile-picture {
+  height: 300px !important;
+  object-fit: cover;
+}
