--- a/Tugas1/component/header.html
+++ b/Tugas1/component/header.html
@@ -1,7 +1,13 @@
 <body>
   <header>
     <div class="d-flex align-items-center mb-4">
-      <img src="assets/images/logo_utb.png" alt="logo_utb" class="logo me-3" />
+      <a href="../home.html">
+        <img
+          src="assets/images/logo_utb.png"
+          alt="logo_utb"
+          class="logo me-3"
+        />
+      </a>
       <div>
         <h1 class="h1 fw-bolder">Universitas Teknologi Bandung</h1>
         <p>This is the exercise of using HTML and CSS</p>
@@ -24,19 +30,19 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mx-auto">
-            <li class="nav-item px-3 bg-secondary-subtle rounded">
-              <a class="nav-link" aria-current="page" href="/home.html">Home</a>
+            <li class="nav-item px-3 rounded ">
+              <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
             </li>
-            <li class="nav-item px-3">
+            <li class="nav-item px-3 rounded">
               <a class="nav-link" aria-current="page" href="#">Campus</a>
             </li>
-            <li class="nav-item px-3">
+            <li class="nav-item px-3 rounded">
               <a class="nav-link" aria-current="page" href="#">Tutor</a>
             </li>
-            <li class="nav-item px-3">
+            <li class="nav-item px-3 rounded">
               <a class="nav-link" aria-current="page" href="#">Fun Games</a>
             </li>
-            <li class="nav-item px-3">
+            <li class="nav-item px-3 rounded">
               <a class="nav-link" aria-current="page" href="#">Contact</a>
             </li>
           </ul>
