--- a/Tugas1/assets/styles/main.css
+++ b/Tugas1/assets/styles/main.css
@@ -39,6 +39,11 @@ h6 {
   transition: 0.5s;
 }
 
+.list-on-hover-primary:hover {
+  background-color: var(--bg-secondary-primary);
+  transition: 0.5s;
+}
+
 /* Home */
 .content-box {
   background-color: var(--text-light-primary);
