--- a/Cakwe/asset/styles/_global.css
+++ b/Cakwe/asset/styles/_global.css
@@ -365,22 +365,35 @@ textarea {
 
 /*  =============================== POST ITEM  ===============================  */
 .l-post-image-container {
-  position: relative;
+  box-sizing: border-box;
   width: 100%;
-  height: 600px;  
+  height: min-content !important;
+  overflow: hidden;
+  position: relative;
+}
+
+.l-post-image-container img {
+  background-color: #fff;
 }
 
 .l-post-item:hover {
   background-color: var(--bg-secondary) !important;
 }
 
-.l-post-item:hover .overlay {
+.l-profile-picture-sm {
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+/* .l-post-item:hover .overlay {
   position: absolute;
   z-index: 1000;
   width: 100%;
   height: 600px;
   background-color: rgba(0, 0, 0, 0.252);
-}
+} */
 
 /*  =============================== END OF POST ITEM  ===============================  */
 
