--- a/Cakwe/asset/styles/_main.css
+++ b/Cakwe/asset/styles/_main.css
@@ -28,7 +28,7 @@
   top: 0;
   left: 0;
   /* flex: 0 0 280px; */
-  width: 280px !important;
+  width: 20% !important;
   height: 100% !important;
 }
 
@@ -37,13 +37,13 @@
   top: 0;
   left: 0;
   /* flex: 0 0 350px; */
-  width: 350px;
+  width: 25%;
   /* background-color: #f0f0f0;  */
   height: 100%;
 }
 
 .l-content {
-  flex-grow: 1;
+  flex: 1;
   background-color: #ffffff;
   padding: 20px;
   height: 100%;
@@ -80,9 +80,17 @@
 
 .l-post-image {
   width: 100%;
-  height: 600px;
-  object-fit: cover;
-  border-radius: 10px;
+  object-fit: cover !important;
+  object-position: center;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.l-post-url {
+  width: 100% !important;
+  height: 400px;
+  object-fit: cover !important;
+  object-position: center;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .l-recent-post-image {
@@ -152,5 +160,12 @@
 
 /*  =============================== END OF SCROLLBAR  ===============================  */
 
+/*  =============================== RECENT POST  ===============================  */
 
+.l-recent-post-container {
+  height: min-content;
+  max-height: 500px;
+  overflow-y: auto;
+}
 
+/*  =============================== END OF RECENT POST  ===============================  */
