--- a/Cakwe/asset/styles/_global.css
+++ b/Cakwe/asset/styles/_global.css
@@ -380,6 +380,13 @@ textarea {
   background-color: var(--bg-secondary) !important;
 }
 
+.l-profile-picture-md {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
 .l-profile-picture-sm {
   width: 24px;
   height: 24px;
