--- a/Cakwe/asset/styles/_global.css
+++ b/Cakwe/asset/styles/_global.css
@@ -173,12 +173,44 @@ textarea {
   padding: 10px 30px !important;
 }
 
-.l-btn-secondary {
+.l-btn-primary-no-radius {
+  font-size: var(--font-md);
+  font-weight: var(--font-medium);
+  color: white !important;
+  background-color: var(--warning) !important;
+  border-radius: 10px;
+  padding: 8px 15px !important;
+}
+
+.l-btn-secondary-no-radius {
   font-size: var(--font-md);
   font-weight: var(--font-medium);
   color: var(--charcoal) !important;
-  background-color: #EAEDEF !important;
+  background-color: #eaedef !important;
+  border-radius: 10px;
+  padding: 8px 15px !important;
+}
+
+.l-btn-secondary-sm {
+  font-size: var(--font-md);
+  font-weight: var(--font-medium);
+  color: var(--charcoal) !important;
+  background-color: #eaedef !important;
   border-radius: 50px;
+  padding: 10px 15px !important;
+}
+
+.l-btn {
+  border: 1px solid rgb(189, 189, 189);
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 6px;
+  font-size: var(--font-sm);
+  font-weight: var(--font-medium);
+  color: var(--charcoal) !important;
+  background-color: transparent !important;
   padding: 10px 15px !important;
 }
 
@@ -394,6 +426,31 @@ textarea {
   object-fit: cover;
 }
 
+.l-profile-picture-md {
+  width: 32px;
+  height: 32px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
+.l-search-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.l-search-icon {
+  width: 16px;
+  height: 16px;
+  object-fit: contain;
+}
+
+.l-search-not-found {
+  width: 120px;
+  height: 120px;
+  object-fit: contain;
+}
+
 /* .l-post-item:hover .overlay {
   position: absolute;
   z-index: 1000;
@@ -403,7 +460,6 @@ textarea {
 } */
 
 /*  =============================== END OF POST ITEM  ===============================  */
-
 
 /*  =============================== PROFILE  ===============================  */
 
