--- a/Cakwe/asset/styles/_main.css
+++ b/Cakwe/asset/styles/_main.css
@@ -16,36 +16,35 @@
 }
 
 .l-main {
-  height: calc(100vh - 65px);
-  margin-top: 65px !important;
+  height: calc(100vh);
+  padding-top: 65px !important;
   display: flex;
   overflow-y: scroll;
   position: relative;
 }
 
 .l-sidebar-left {
-  position: sticky;
-  top: 0;
+  position: fixed;
+  top: 65px; /* Adjust to the height of the navbar */
   left: 0;
-  /* flex: 0 0 280px; */
   width: 20% !important;
-  height: 100% !important;
+  height: calc(100vh - 65px); /* Adjust height to fit the viewport */
 }
 
 .l-sidebar-right {
-  position: sticky;
-  top: 0;
-  left: 0;
-  /* flex: 0 0 350px; */
+  padding: 10px 10px;
+  position: fixed;
+  top: 65px; /* Adjust to the height of the navbar */
+  right: 10px;
   width: 25%;
-  /* background-color: #f0f0f0;  */
-  height: 100%;
+  height: calc(100vh - 65px); /* Adjust height to fit the viewport */
 }
 
 .l-content {
   flex: 1;
-  background-color: #ffffff;
   padding: 20px;
+  margin-left: 20%; /* Adjust margin to account for left sidebar */
+  margin-right: 25%; /* Adjust margin to account for right sidebar */
   height: 100%;
   box-sizing: border-box;
 }
@@ -169,3 +168,103 @@
 }
 
 /*  =============================== END OF RECENT POST  ===============================  */
+
+/*  =============================== COMMENT SECTION  ===============================  */
+
+.comment-thread {
+  width: 100%;
+  max-width: 100%;
+  margin: auto;
+  border: 1px solid transparent; /* Removes margin collapse */
+}
+.m-0 {
+  margin: 0;
+}
+.sr-only {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 0.5px;
+  height: 1px;
+  overflow: hidden;
+}
+
+/* Comment */
+.comment {
+  position: relative;
+  margin: 20px auto;
+}
+
+.comment-heading {
+  display: flex;
+  align-items: center;
+  height: 50px;
+}
+
+.comment-author:hover {
+  text-decoration: underline;
+}
+.replies {
+  margin-left: 20px;
+}
+
+.replies .comment {
+  position: relative;
+  margin: 0px auto;
+}
+
+/* Adjustments for the comment border links */
+
+.comment-border-link {
+  display: block;
+  position: absolute;
+  top: 40px;
+  left: 6.5px;
+  width: 10px;
+  height: calc(100% - 30px);
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  background-color: rgba(0, 0, 0, 0.1);
+  background-clip: padding-box;
+}
+
+.comment-border-link:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.comment-body {
+  padding: 0 20px;
+  padding-left: 28px;
+}
+.replies {
+  margin-left: 28px;
+}
+
+/* Adjustments for toggleable comments */
+
+details.comment summary {
+  position: relative;
+  list-style: none;
+  cursor: pointer;
+}
+details.comment summary::-webkit-details-marker {
+  display: none;
+}
+details.comment:not([open]) .comment-heading {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.comment-heading::after {
+  display: inline-block;
+  position: absolute;
+  right: 5px;
+  align-self: center;
+  font-size: 12px;
+  color: rgba(0, 0, 0, 0.55);
+}
+details.comment[open] .comment-heading::after {
+  content: "Click to hide";
+}
+details.comment:not([open]) .comment-heading::after {
+  content: "Click to show";
+}
+
+/*  =============================== END OF COMMENT SECTION  ===============================  */
