--- a/Cakwe/asset/styles/_main.css
+++ b/Cakwe/asset/styles/_main.css
@@ -267,4 +267,16 @@ details.comment:not([open]) .comment-heading::after {
   content: "Click to show";
 }
 
+
+/* RESPONSIVE */
+
+/* (bootstrap lg: 992px) */
+@media (max-width: 991.98px) {
+  .l-content {
+    margin-left: 0; 
+    margin-right: 0; 
+    margin-top: 15%;
+    margin-bottom: 100px;
+  }
+}
 /*  =============================== END OF COMMENT SECTION  ===============================  */
