--- a/Cakwe/asset/styles/_main.css
+++ b/Cakwe/asset/styles/_main.css
@@ -49,6 +49,24 @@
   box-sizing: border-box;
 }
 
+.l-content-home {
+  flex: 1;
+  padding: 20px;
+  margin-left: 20%; /* Adjust margin to account for left sidebar */
+  margin-right: 25%; /* Adjust margin to account for right sidebar */
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.l-content-profile {
+  flex: 1;
+  padding: 20px;
+  margin-left: 20%; /* Adjust margin to account for left sidebar */
+  margin-right: 25%; /* Adjust margin to account for right sidebar */
+  height: 100%;
+  box-sizing: border-box;
+}
+
 .l-detail-content {
   width: 60%;
   padding: 20px;
@@ -280,15 +298,54 @@ details.comment:not([open]) .comment-heading::after {
     margin-left: 0; 
     margin-right: 0; 
     margin-top: 15%;
-    margin-bottom: 150%;
+    margin-bottom: 20%;
     padding: 0;
   }
+
+  .l-content-home {
+    margin-left: 0; 
+    margin-right: 0; 
+    margin-top: 15%;
+    margin-bottom: 100%;
+    padding: 0;
+  }
+
+  .l-content-profile {
+    margin-left: 0; 
+    margin-right: 0; 
+    margin-top: 15%;
+    margin-bottom: 100%;
+    padding: 0;
+  }  
 
 }
 
 @media (max-width: 575.98px) {
   .l-post-content {
     padding: 0;
+  }
+
+  .l-content-home {
+    margin-left: 0; 
+    margin-right: 0; 
+    margin-top: 15%;
+    margin-bottom: 300%;
+    padding: 0;
+  }
+
+  .l-content-profile {
+    margin-left: 0; 
+    margin-right: 0; 
+    margin-top: 15%;
+    margin-bottom: 370%;
+    padding: 0;
+  }
+
+  .l-detail-content {
+    width: 100%;
+    padding: 20px;
+    margin-bottom: 100px;
+    height: min-content;
   }
 }
 /*  =============================== END OF COMMENT SECTION  ===============================  */
